--- a/EmployeeManagement/Views/Home/Edit.cshtml
+++ b/EmployeeManagement/Views/Home/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeeManagement.Models.Employee
+﻿@model Employee
 
 @{
     ViewData["Title"] = "Edit";
@@ -42,3 +42,12 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <script src="~/jquery/jquery.js"></script>
+        <script src="~/bootstrap/js/bootstrap.js"></script>
+    }
+    }
