--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -1,27 +1,30 @@
-﻿@using EmployeeManagement.Models;
-@model IEnumerable<Employee>
+﻿@model IEnumerable<Employee>
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Employee List";
 }
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Department</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var employee in Model)
-        {
-            <tr>
-                <td>@employee.Id</td>
-                <td>@employee.Name</td>
-                <td>@employee.Department</td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="card">
+    @foreach (var employee in Model)
+    {
+        <div class="card m-3">
+            <div class="card-header">
+                <h3>@employee.Name</h3>
+            </div>
+            <img class="card-img-top" src="~\images\noimage.png" />
+            <div class="card-footer text-center">
+                <a href="#" class="btn btn-primary align-content-md-between">View</a>
+                <a href="#" class="btn btn-primary align-content-between">Edit</a>
+                <a href="#" class="btn btn-danger align-content-between">Delete</a>
+            </div>
+        </div>
+    }
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <script src="~/jquery/jquery.js"></script>
+        <script src="~/bootstrap/js/bootstrap.js"></script>
+    }
+    }
