--- a/EmployeeManagement/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/EmployeeManagement/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,5 +1,8 @@
-﻿<environment names="Development">
-    
+﻿<environment names="Development"> 
+    <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
+    <script src="~/jquery/jquery.js"></script>
+    <script src="~/bootstrap/js/bootstrap.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </environment>
