Added EnitityFrameworkCore support dropped IEmployeeReposistory dropped MockDataClass

--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -22,6 +22,10 @@
     }
 </div>
 
+<a asp-action="Create">Create</a>
+<a asp-action="Details" asp-route-id="1"></a>
+<a asp-action="Edit" asp-route-id="1"></a>
+
 
 @section Scripts {
     @{
