--- a/EmployeeManagement/Views/Home/Create.cshtml
+++ b/EmployeeManagement/Views/Home/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using static EmployeeManagement.Models.Employee;
-@model Employee
+﻿@model Employee
 
 @{
     ViewBag.Title = "Create Employee";
@@ -7,22 +6,30 @@
 
 <div class="container">
     <form asp-asp-controller="Home" asp-action="Create"
-          method="post">
-        <div>
-            <label asp-for="Name"></label>
-            <input asp-for="Name" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+          method="post" class="mt-3">
+        <div class="form-control-lg row">
+            <label asp-for="Name" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <input asp-for="Name" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>    
         </div>
-        <div>
-            <label asp-for="Email"></label>
-            <input asp-for="Email" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+        <div class="form-control-lg row">
+            <label asp-for="Email" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <input asp-for="Email" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
         </div>
-        <div>
-            <label asp-for="Department"></label>
-            <select asp-for="Department" asp-items="Html.GetEnumSelectList<Dept>()" />
-            <span asp-validation-for="Department" class="text-danger"></span>
+        <div class="form-control-lg row">
+            <label asp-for="Department" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <select asp-for="Department" class="form-select m-sm-2" asp-items="@Html.GetEnumSelectList<Employee.Dept>()">
+                    <option value="">Please Select</option>
+                 </select>
+                <span asp-validation-for="Department" class="text-danger"></span>
+            </div>
         </div>
-        <input type="submit" value="Create" />
+        <input type="submit" class="btn btn-primary" value="Create" />
     </form>
 </div>
