--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -15,8 +15,8 @@
             <div class="card-footer text-center">
                 <a asp-controller="home" asp-action="details"
                    asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a>
-                <a href="#" class="btn btn-primary m-1">Edit</a>
-                <a href="#" class="btn btn-danger m-1">Delete</a>
+                <a asp-action="edit" asp-route-id="@employee.Id" class="btn btn-primary m-1">Edit</a>
+                <a asp-action="delete" asp-route-id="@employee.Id" class="btn btn-danger m-1">Delete</a>
             </div>
         </div>
     }
