--- a/EmployeeManagement/Views/Home/Create.cshtml
+++ b/EmployeeManagement/Views/Home/Create.cshtml
@@ -1,35 +1,63 @@
-﻿@model Employee
+﻿@model EmployeeCreateViewModel
 
 @{
     ViewBag.Title = "Create Employee";
 }
 
-<div class="container">
-    <form asp-asp-controller="Home" asp-action="Create"
-          method="post" class="mt-3">
-        <div class="form-control-lg row">
-            <label asp-for="Name" class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-                <input asp-for="Name" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>    
+<form enctype="multipart/form-data" asp-controller="home" asp-action="create"
+      method="post" class="mt-3">
+    <div class="form-group row">
+        <label asp-for="Name" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="Name" class="form-control" placeholder="Name">
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
-        <div class="form-control-lg row">
-            <label asp-for="Email" class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-                <input asp-for="Email" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div class="form-group row">
+        <label asp-for="Email" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="Email" class="form-control" placeholder="Email">
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label asp-for="Department" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <select asp-for="Department" class="custom-select mr-sm-2"
+                    asp-items="Html.GetEnumSelectList<Employee.Dept>()">
+                <option value="">Please Select</option>
+            </select>
+            <span asp-validation-for="Department" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <div class="custom-file">
+                <input multiple asp-for="Photo" class="form-control custom-file-input">
+                <label class="custom-file-label">Choose File...</label>
             </div>
         </div>
-        <div class="form-control-lg row">
-            <label asp-for="Department" class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-                <select asp-for="Department" class="form-select m-sm-2" asp-items="@Html.GetEnumSelectList<Employee.Dept>()">
-                    <option value="">Please Select</option>
-                 </select>
-                <span asp-validation-for="Department" class="text-danger"></span>
-            </div>
+    </div>
+
+    <div asp-validation-summary="All" class="text-danger"></div>
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Create</button>
         </div>
-        <input type="submit" class="btn btn-primary" value="Create" />
-    </form>
-</div>
+    </div>
+
+    @section Scripts {
+        <script>
+            $(document).ready(function () {
+                $('.custom-file-input').on("change", function () {
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).next('.custom-file-label').html(fileName);
+                });
+            });
+        </script>
+    }
+</form>
