--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model HomeDetailsViewModel
 
 @{
-    ViewData["Title"] = "Employee Details";
+    ViewBag.Title = "Employee Details";
+    var photoPath = "~/Images/" + (Model.Employee.PhotoPath ?? "noimage.jpg");
 }
 
 <div class="row justify-content-center m-3">
@@ -12,28 +13,25 @@
             </div>
 
             <div class="card-body text-center">
-                <img class="card-img-top" src="~/images/noimage.jpg" asp-append-version />
+                <img class="card-img-top" src="@photoPath" asp-append-version="true" />
 
                 <h4>Employee ID : @Model.Employee.Id</h4>
                 <h4>Email : @Model.Employee.Email</h4>
                 <h4>Department : @Model.Employee.Department</h4>
+
             </div>
             <div class="card-footer text-center">
-                <a asp-asp-controller="home" asp-action="index" class="btn btn-primary">Back</a>
-                <a asp-action="edit" asp-route-id="@Model.Employee.Id" class="btn btn-primary">Edit</a>
-                <a asp-action="delete" asp-route-id="@Model.Employee.Id" class="btn btn-danger">Delete</a>
+                <a asp-controller="home" asp-action="index"
+                   class="btn btn-primary">Back</a>
+                <a asp-action="edit" asp-controller="home"
+                   asp-route-id="@Model.Employee.Id"
+                   class="btn btn-primary">Edit</a>
+                <a href="#" class="btn btn-danger">Delete</a>
             </div>
         </div>
     </div>
 </div>
 
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Employee.Id })
-    <a asp-action="Index">Back to List</a>
-
-
-
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-    }
+    <script src="~/js/CustomScript.js"></script>
+}
