--- a/EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -1,41 +1,81 @@
-﻿<html>
+﻿@using EmployeeManagement.Areas.Identity.Data;
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<AppUser> signInManager;
+
+<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     
-    
+    <link href="~/css/site.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-
     <div class="container">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <a class="navbar-brand" asp-controller="home" asp-action="index">
-                <img src="~/images/employees.png" width="30" height="30">
+            <a class="navbar-brand" asp-action="index" asp-controller="home">
+                <img src="~/images/employees.png" height="30" width="30" />
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="home" asp-action="index">List</a>
+                        <a asp-action="index" asp-controller="home" class="nav-link">List</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="home" asp-action="create">Create</a>
+                        <a asp-action="create" asp-controller="home" class="nav-link">Create</a>
                     </li>
+                    @*@if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {*@
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Manage
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" asp-controller="Administration"
+                               asp-action="ListUsers">Users</a>
+                            <a class="dropdown-item" asp-controller="Administration"
+                               asp-action="ListRoles">Roles</a>
+                            <a class="dropdown-item" asp-controller="Account"
+                               asp-action="ChangePassword">Password</a>
+                        </div>
+                    </li>
+                    @*}*@
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item">
+                            <form method="post" asp-action="logout" asp-controller="account">
+                                <button type="submit" class="nav-link btn btn-link py-0"
+                                        style="width:auto">
+                                    Logout @User.Identity.Name
+                                </button>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a asp-action="register" asp-controller="account" class="nav-link">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="login" asp-controller="account" class="nav-link">Login</a>
+                        </li>
+                    }
+
                 </ul>
             </div>
         </nav>
-
         <div>
             @RenderBody()
         </div>
-
         @if (IsSectionDefined("Scripts"))
         {
-            @RenderSection("Scripts", required: false)
+            @RenderSection("Scripts", required: true)
         }
     </div>
-
 </body>
 </html>
