--- a/EmployeeManagement/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/EmployeeManagement/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<AppUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
