--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -1,34 +1,32 @@
 ﻿@model IEnumerable<Employee>
 
 @{
-    ViewData["Title"] = "Employee List";
+    ViewBag.Title = "Employee List";
 }
 
-<div class="card">
+
+<div class="card-deck">
     @foreach (var employee in Model)
     {
-        <div class="card m-3">
+        var photoPath = "~/Images/" + (employee.PhotoPath ?? "noimage.jpg");
+
+        <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
             <div class="card-header">
                 <h3>@employee.Name</h3>
             </div>
-            <img class="card-img-top" src="~/images/noimage.jpg" asp-append-version />
+
+            <img class="card-img-top imageThumbnail" src="@photoPath" 
+                 asp-append-version="true"/>
+
             <div class="card-footer text-center">
-                <a asp-controller="home" asp-action="details"
-                   asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a>
-                <a asp-action="edit" asp-route-id="@employee.Id" class="btn btn-primary m-1">Edit</a>
-                <a asp-action="delete" asp-route-id="@employee.Id" class="btn btn-danger m-1">Delete</a>
+                <a asp-controller="home" asp-action="details" 
+                   asp-route-id="@employee.EncryptedId"
+                   class="btn btn-primary m-1">View</a>
+                <a asp-action="edit" asp-controller="home"
+                   asp-route-id="@employee.Id"
+                   class="btn btn-primary m-1">Edit</a>
+                <a href="#" class="btn btn-danger m-1">Delete</a>
             </div>
         </div>
     }
 </div>
-
-<a asp-action="Create">Create</a>
-<a asp-action="Details" asp-route-id="1"></a>
-<a asp-action="Edit" asp-route-id="1"></a>
-
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-    }
