--- a/EmployeeManagement/Views/Shared/_LoginPartial.cshtml
+++ b/EmployeeManagement/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using EmployeeManagement.Areas.Identity.Data
 
-@inject SignInManager<AppUser> SignInManager
-@inject UserManager<AppUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
