--- a/EmployeeManagement/Views/_ViewImports.cshtml
+++ b/EmployeeManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using EmployeeManagement.Models;
-@using EmployeeManagement.ViewModels;
+﻿@using EmployeeManagement.ViewModels;
+@using EmployeeManagement.Models;
+@using Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
