Added Identity and fixed scripts and pictures

--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -33,5 +33,7 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/CustomScript.js"></script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
