--- a/EmployeeManagement/Views/Home/Create.cshtml
+++ b/EmployeeManagement/Views/Home/Create.cshtml
@@ -50,14 +50,9 @@
         </div>
     </div>
 
+ 
+
     @section Scripts {
-        <script>
-            $(document).ready(function () {
-                $('.custom-file-input').on("change", function () {
-                    var fileName = $(this).val().split("\\").pop();
-                    $(this).next('.custom-file-label').html(fileName);
-                });
-            });
-        </script>
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 </form>
