--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -6,20 +6,31 @@
 
 
 <div class="card-deck">
+     @{
+         string photoPath = "";
+     }
     @foreach (var employee in Model)
     {
-        var photoPath = "~/Images/" + (employee.PhotoPath ?? "noimage.jpg");
+        if (!employee.PhotoPath.Contains("~/Images/noimage.jpg"))
+        {
+            photoPath = "~/Images/" + (employee.PhotoPath ?? "noimage.jpg");
+        }
+        else
+        {
+            photoPath = employee.PhotoPath;
+        }
+
 
         <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
             <div class="card-header">
                 <h3>@employee.Name</h3>
             </div>
 
-            <img class="card-img-top imageThumbnail" src="@photoPath" 
-                 asp-append-version="true"/>
+            <img class="card-img-top imageThumbnail" src="@photoPath"
+                 asp-append-version="true" />
 
             <div class="card-footer text-center">
-                <a asp-controller="home" asp-action="details" 
+                <a asp-controller="home" asp-action="details"
                    asp-route-id="@employee.EncryptedId"
                    class="btn btn-primary m-1">View</a>
                 <a asp-action="edit" asp-controller="home"
@@ -30,3 +41,10 @@
         </div>
     }
 </div>
+
+@section Scripts
+    {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+        }
