--- a/EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    
+
     <link href="~/css/site.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
@@ -29,7 +29,7 @@
                     @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                     {
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Manage
                             </a>
@@ -72,10 +72,13 @@
         <div>
             @RenderBody()
         </div>
-        @if (IsSectionDefined("Scripts"))
-        {
-            @RenderSection("Scripts", required: true)
-        }
     </div>
+
+
+    @if (IsSectionDefined("Scripts"))
+        {
+            @RenderSection("Scripts", required: false);
+        }
+
 </body>
 </html>
