--- a/EmployeeManagement/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/EmployeeManagement/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -2,11 +2,17 @@
     <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
     <script src="~/jquery/jquery.js"></script>
+    <script src="~/bootstrap/js/CustomScript.js"></script>
     <script src="~/bootstrap/js/bootstrap.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </environment>
 <environment names="Staging,Production">
+    <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
+    <script src="~/jquery/jquery.js"></script>
+    <script src="~/bootstrap/js/CustomScript.js"></script>
+    <script src="~/bootstrap/js/bootstrap.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
             asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.validator"
