--- a/EmployeeManagement/Views/Account/Register.cshtml
+++ b/EmployeeManagement/Views/Account/Register.cshtml
@@ -33,3 +33,11 @@
         </form>
     </div>
 </div>
+
+
+@section Scripts
+    {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+        }
