--- a/EmployeeManagement/Views/Account/Login.cshtml
+++ b/EmployeeManagement/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
         </form>
     </div>
 
-    <div class="col-md-6">
+    @*<div class="col-md-6">
         <h1>External Login</h1>
         <hr />
         @{
@@ -59,5 +59,13 @@
                 </form>
             }
         }
-    </div>
+    </div>*@
 </div>
+
+
+@section Scripts
+    {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+        }
