--- a/EmployeeManagement/Views/Administration/ListUsers.cshtml
+++ b/EmployeeManagement/Views/Administration/ListUsers.cshtml
@@ -61,6 +61,9 @@ else
     </div>
 }
 
-@section Scripts {
-    <script src="~/js/CustomScript.js"></script>
-}
+@section Scripts
+    {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+        }
