--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -2,7 +2,15 @@
 
 @{
     ViewBag.Title = "Employee Details";
-    var photoPath = "~/Images/" + (Model.Employee.PhotoPath ?? "noimage.jpg");
+    var photoPath = "";
+    if (!Model.Employee.PhotoPath.Contains("~/Images/noimage.jpg"))
+    {
+        photoPath = "~/Images/" + (Model.Employee.PhotoPath ?? "noimage.jpg");
+    }
+    else
+    {
+        photoPath = Model.Employee.PhotoPath;
+    }
 }
 
 <div class="row justify-content-center m-3">
@@ -13,7 +21,7 @@
             </div>
 
             <div class="card-body text-center">
-                <img class="card-img-top" src="@photoPath" asp-append-version="true" />
+                <img class="card-img-top" width="100" src="@photoPath" asp-append-version="true" />
 
                 <h4>Employee ID : @Model.Employee.Id</h4>
                 <h4>Email : @Model.Employee.Email</h4>
@@ -32,8 +40,9 @@
     </div>
 </div>
 
-@section Scripts {
+@section Scripts
+    {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+        }
