--- a/EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -1,45 +1,44 @@
-﻿@using EmployeeManagement.Models;
-@using Microsoft.AspNetCore.Identity;
-@inject SignInManager<ApplicationUser> signInManager;
+﻿@inject SignInManager<ApplicationUser> signInManager;
 
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
 <head>
-    <meta name="viewport" content="width=device-width" />
-
-    <link href="~/css/site.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <a class="navbar-brand" asp-action="index" asp-controller="home">
+            <a class="navbar-brand" asp-action="index" asp-controller="home" title="employees">
                 <img src="~/images/employees.png" height="30" width="30" />
             </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <button type="button" title="dropdownbutton" class="navbar-toggler" data-toggle="dropdown" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a asp-action="index" asp-controller="home" class="nav-link">List</a>
+                        <a asp-action="index" asp-controller="home" title="Index" class="nav-link">List</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="create" asp-controller="home" class="nav-link">Create</a>
+                        <a asp-action="create" asp-controller="home" title="Create" class="nav-link">Create</a>
                     </li>
                     @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Manage">
                                 Manage
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" asp-controller="Administration"
-                                   asp-action="ListUsers">Users</a>
+                                   asp-action="ListUsers" title="Users">Users</a>
                                 <a class="dropdown-item" asp-controller="Administration"
-                                   asp-action="ListRoles">Roles</a>
+                                   asp-action="ListRoles" title="Roles">Roles</a>
                                 <a class="dropdown-item" asp-controller="Account"
-                                   asp-action="ChangePassword">Password</a>
+                                   asp-action="ChangePassword" title="Password">Password</a>
                             </div>
                         </li>
                     }
@@ -50,7 +49,7 @@
                         <li class="nav-item">
                             <form method="post" asp-action="logout" asp-controller="account">
                                 <button type="submit" class="nav-link btn btn-link py-0"
-                                        style="width:auto">
+                                        style="width:auto" title="Logout">
                                     Logout @User.Identity.Name
                                 </button>
                             </form>
@@ -59,10 +58,10 @@
                     else
                     {
                         <li class="nav-item">
-                            <a asp-action="register" asp-controller="account" class="nav-link">Register</a>
+                            <a asp-action="register" asp-controller="account" class="nav-link" title="Register">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a asp-action="login" asp-controller="account" class="nav-link">Login</a>
+                            <a asp-action="login" asp-controller="account" class="nav-link" title="Login">Login</a>
                         </li>
                     }
 
