--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -36,7 +36,9 @@
                 <a asp-action="edit" asp-controller="home"
                    asp-route-id="@employee.Id" title="Edit"
                    class="btn btn-primary m-1">Edit</a>
-                <a asp-controller="Home" asp-action="Delete" class="btn btn-danger m-1">Delete</a>
+                <a asp-controller="Home" asp-action="Delete" 
+                asp-route-id="@employee.Id" 
+                class="btn btn-danger m-1" title="Delete">Delete</a>
             </div>
         </div>
     }
